// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateCodeChangelogEntries should handle empty changelog directory 1`] = `""`;

exports[`generateCodeChangelogEntries should process changelog entries and format them 1`] = `
"### Added

- Feature 1

### Fixed

- Bug 1
"
`;

exports[`generateCodeChangelogEntries should process changelog entries with existing changelog and format them 1`] = `
"### Added

- some stuff
- Feature 1

### Removed

- almost everything

### Fixed

- some other stuff
- Bug 1
"
`;
